--- a/app/views/school_classes/new.html.erb
+++ b/app/views/school_classes/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New School Class Form:</h1>
-<%= form_for(:school_class, url: school_classes_path) do |t|%>
+<%= form_for(@school_class) do |t|%>
     <%= t.label(:title)%>
     <%= t.text_field(:title)%>
     <%= t.label(:room_number)%>
