--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Student Form:</h1>
-<%= form_for(:student, url: students_path) do |t|%>
+<%= form_for(@student) do |t|%>
     <%= t.label(:first_name)%>
     <%= t.text_field(:first_name)%>
     <%= t.label(:last_name)%>
